kubernetes/apps/services/oxicloud/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oxicloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: oxicloud
      app.kubernetes.io/instance: oxicloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: kgateway-internal
      toPorts:
        - ports:
            - port: "8086"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # PostgreSQL (CloudNative-PG pg18vec)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
            cnpg.io/cluster: pg18vec
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # NFS-Server
    - toCIDR:
        - 10.100.0.81/32
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
    # Externe HTTPS (OIDC/WOPI/Updates)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
